added publications link on homepage

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 # Permalinks
-permalink: pretty
 
 # Setup
 host: localhost
@@ -11,12 +10,9 @@ author:
     email: rahulshivajipawar@gmail.com
 
 future: true
-permalink: "/:title/"
+#permalink: "/:title/"
 
-pages_list:
- 
-   Publications: '/publications'
-   
+
 
 markdown: kramdown
 
